@@ -9,3 +9,4 @@ gnomecc.desktop
 Gnome.directory
 GNOME_ControlCenter.server
 GNOME_ControlCenter.server.in
+gnomecc-rounded-rect-pixbuf.h
